finished delete and edit
